[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/EnemyMushroom.gd" type="Script" id=1]
[ext_resource path="res://sprites/mushroom/redmushroom1.png" type="Texture" id=2]
[ext_resource path="res://sprites/mushroom/redmushroom2.png" type="Texture" id=3]
[ext_resource path="res://sprites/mushroom/redmushroom3.png" type="Texture" id=4]
[ext_resource path="res://sprites/mushroom/redmushroom4.png" type="Texture" id=5]
[ext_resource path="res://sprites/mushroom/redmushroom5.png" type="Texture" id=6]
[ext_resource path="res://sprites/mushroom/redmushroom6.png" type="Texture" id=7]
[ext_resource path="res://sprites/mushroom/redmushroom7.png" type="Texture" id=8]
[ext_resource path="res://sprites/mushroom/redmushroom8.png" type="Texture" id=9]
[ext_resource path="res://sprites/mushroom/redmushroom9.png" type="Texture" id=10]
[ext_resource path="res://sprites/mushroom/redmushroomangry1.png" type="Texture" id=11]
[ext_resource path="res://sprites/mushroom/redmushroomangry2.png" type="Texture" id=12]
[ext_resource path="res://sprites/mushroom/redmushroomangry3.png" type="Texture" id=13]
[ext_resource path="res://sprites/mushroom/redmushroomangry4.png" type="Texture" id=14]
[ext_resource path="res://sprites/mushroom/redmushroomangry5.png" type="Texture" id=15]
[ext_resource path="res://sprites/mushroom/redmushroomangry6.png" type="Texture" id=16]
[ext_resource path="res://sprites/mushroom/redmushroomangry7.png" type="Texture" id=17]
[ext_resource path="res://sprites/mushroom/redmushroomangry8.png" type="Texture" id=18]
[ext_resource path="res://sprites/mushroom/redmushroomangry9.png" type="Texture" id=19]
[ext_resource path="res://sprites/mushroom/redmushroomangry10.png" type="Texture" id=20]
[ext_resource path="res://sprites/mushroom/redmushroomattack.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "angry",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16.7904, 11.3257 ), Vector2( 25.842, 16.6718 ), Vector2( 46.5733, 24.2635 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.16795, 44.9663 ), Vector2( -0.583984, 38.5426 ), Vector2( 0.875961, 30.3669 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.5733, 24.2635 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.4545

[sub_resource type="CircleShape2D" id=5]
radius = 203.854

[node name="EnemyMushroom" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="Explosion" type="Sprite" parent="."]
position = Vector2( 0, -34 )
texture = ExtResource( 21 )
hframes = 10
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Explosion"]
anims/explosion = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Explosion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion/Area2D"]
position = Vector2( 0.875961, 30.3669 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 4 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 5 )
[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Explosion/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
